# Scrapper

./: .env.sample  .gitignore  Dockerfile  README.md  config.yaml  crawl_nsu_vk_knowledge.ipynb  crawl_nsu_vk_knowledge.py  crawl_nsu_web_knowledge.ipynb  crawl_nsu_web_knowledge.py  default_config.yaml  docker-compose.yml  filter_knowledge.py  merge_knowledge.py  nsu_urls_spider.py  pyproject.toml  scrapper.py
crawlers/: crawl_nsu_vk_knowledge.py  crawl_nsu_web_knowledge.py
meno_database/: vk_posts.jsonl
scrapped_data/: vk_scrapped.jsonl
urls/: vk_urls.json  web_urls.json
utils/: logger.py
